--- a/Modul_2/KHS.html
+++ b/Modul_2/KHS.html
@@ -147,38 +147,11 @@
         </tr>
 
     </table>
-</body>
-<head>
-	<style>
-		.hand {
-			position: absolute;
-			right: 0;
-			bottom: 0;
-			width: 200px;
-			height: 200px;
-			background: url('hand.png') no-repeat;
-			background-size: contain;
-		}
-
-		#tanda-tangan {
-			position: absolute;
-			right: 220px;
-			bottom: 20px;
-			width: 150px;
-			height: 150px;
-			border: 1px solid rgb(10, 8, 8);
-			padding: 10px;
-			box-sizing: border-box;
-		}
-	</style>
-</head>
-<body>
-	<div class="hand"></div>
-	<div id="tanda-tangan">
-		Surakarta, 21-03-2024<br>
-		Ka.Prodi S1 Informatika<br>
-		Nurul Kholisatul Ulya, S.Kom., M.Eng<br>
-		NIDN 0628088902 Surakarta , 21-03-2024 Ka.Prodi S1 Informatika Nurul Kholisatul Ulya , S.Kom . , M.Eng NIDN 0628088902
-	</div>
+    <p style="text-align:right;">
+      Surakarta, 21-03-2024<br>
+      Ka.Prodi S1 Informatika<br>
+      Nurul Kholisatul Ulya, S.Kom., M.Eng<br>
+      NIDN 0628088902
+    </p>
 </body>
 </html>
