--- a/Modul_2/tes.html
+++ b/Modul_2/tes.html
@@ -1,35 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Context</title>
-	<style>
-		.context-container {
-			width: 500px;
-			margin: 0 auto;
-			padding: 20px;
-			border: 1px solid #ccc;
-			font-family: Arial, sans-serif;
-		}
-		.context-container h3 {
-			margin-top: 0;
-		}
-		.context-container p {
-			margin-bottom: 10px;
-		}
-	</style>
-</head>
-<body>
-	<div class="context-container">
-		<h3>: Nama Saya</h3>
-		<p>: 202500004</p>
-		<p>: S1 Informatika</p>
-		<p>: 2023/2024 Ganjil</p>
-		<h3>Nama NIM Jurusan</h3>
-		<p>INSTITUT TEKNOLOGI SAINS DAN KESEHATAN PKU MUHAMMADIYAH SURAKARTA KAMPUS</p>
-		<p>JI. Tulang Bawang Tengah No. 26 Kadipiro Banjarsari Surakarta</p>
-		<p>Tip / Fax (0271) 734955</p>
-		<p>Email: <a href="mailto:info@itspku.ac.id">info@itspku.ac.id</a></p>
-		<p><a href="www.itspku.ac.id">www.itspku.ac.id</a></p>
-	</div>
-</body>
-</html>
+<p style="text-align:right;">
+	Surakarta, 21-03-2024<br>
+	Ka.Prodi S1 Informatika<br>
+	Nurul Kholisatul Ulya, S.Kom., M.Eng<br>
+	NIDN 0628088902
+  </p>
